# Bot_2048

./: 2048.py  DQN_2048.py  EVAL_2048.py  README.md  game_2048.py  teacher_2048.test.py
teacher/: CMakeLists.txt  teacher_2048.cpp  teacher_2048.test.cpp
teacher/include/: teacher_2048.h
